--- a/index.html
+++ b/index.html
@@ -2,263 +2,198 @@
 <html lang="cs">
 <head>
 <meta charset="UTF-8">
-<title>Panel kotelny</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<title>Kotelna – Profi panel</title>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
 <style>
-/* ===== TÉMATA ===== */
-:root {
-    --bg: #0f172a;
-    --panel: #020617;
-    --text: #e5e7eb;
-    --muted: #94a3b8;
-    --border: #1e293b;
-}
-
-.light {
-    --bg: #f1f5f9;
-    --panel: #ffffff;
-    --text: #020617;
-    --muted: #475569;
-    --border: #cbd5f5;
-}
-
-/* ===== ZÁKLAD ===== */
 body {
-    margin: 0;
-    font-family: "Segoe UI", sans-serif;
-    background: var(--bg);
-    color: var(--text);
-    transition: background .3s, color .3s;
+    font-family: Arial, sans-serif;
+    background:#f4f6f8;
+    margin:0;
 }
-
-/* ===== HLAVIČKA ===== */
 header {
-    background: var(--panel);
-    padding: 12px 20px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 15px;
-    border-bottom: 2px solid var(--border);
+    background:#1f2937;
+    color:white;
+    padding:15px;
+    text-align:center;
 }
-
-.header-left {
-    font-size: 22px;
-    font-weight: 600;
-    white-space: nowrap;
-}
-
-.header-right {
-    display: flex;
-    align-items: center;
-    gap: 18px;
-    font-size: 22px;
-    font-weight: 600;
-    color: var(--muted);
-    white-space: nowrap;
-}
-
-.header-right button {
-    background: var(--bg);
-    border: 1px solid var(--border);
-    color: var(--text);
-    border-radius: 8px;
-    padding: 4px 8px;
-    cursor: pointer;
-}
-
-/* ===== OBSAH ===== */
 .container {
-    padding: 20px;
+    padding:20px;
+    max-width:1200px;
+    margin:auto;
 }
-
-.cards {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px,1fr));
-    gap: 20px;
+.grid {
+    display:grid;
+    grid-template-columns: repeat(auto-fit,minmax(220px,1fr));
+    gap:15px;
 }
-
 .card {
-    background: var(--panel);
-    border-radius: 12px;
-    padding: 18px;
-    box-shadow: 0 0 20px rgba(0,0,0,0.35);
+    background:white;
+    padding:15px;
+    border-radius:8px;
+    box-shadow:0 2px 5px rgba(0,0,0,0.1);
 }
-
-.card h2 {
-    margin: 0;
-    font-size: 15px;
-    color: var(--muted);
+.card h3 {
+    margin-top:0;
+    font-size:16px;
+    color:#374151;
 }
-
 .value {
-    font-size: 36px;
-    margin-top: 8px;
+    font-size:28px;
+    font-weight:bold;
 }
-
-.unit {
-    font-size: 16px;
-    color: var(--muted);
+.settings input {
+    width:100%;
+    padding:6px;
+    margin-top:5px;
 }
-
+footer {
+    text-align:center;
+    margin-top:20px;
+    color:#555;
+}
 canvas {
-    background: var(--panel);
-    border-radius: 12px;
-    padding: 12px;
-}
-
-.footer {
-    margin-top: 10px;
-    font-size: 13px;
-    color: var(--muted);
-    text-align: right;
-}
-
-/* ===== MOBIL ===== */
-@media (max-width: 600px) {
-    .header-left,
-    .header-right {
-        font-size: 16px;
-    }
-
-    .cards {
-        grid-template-columns: 1fr;
-    }
-
-    .value {
-        font-size: 30px;
-    }
+    background:white;
+    border-radius:8px;
+    padding:10px;
 }
 </style>
 </head>
 
 <body>
-
 <header>
-    <div class="header-left">🔥 Panel kotelny</div>
-
-    <div class="header-right">
-        <div id="now">–</div>
-        <div>Aktualizace: <span id="lastUpdate">–</span></div>
-        <button onclick="toggleTheme()">🌓</button>
-        <button onclick="toggleFullscreen()">⛶</button>
-    </div>
+    <h1>Kotelna – Attack FD 25 Automat</h1>
+    <div id="datetime"></div>
+    <div id="lastUpdate"></div>
 </header>
 
 <div class="container">
 
-<div class="cards">
-    <div class="card">
-        <h2>Teplota na kotli</h2>
-        <div class="value"><span id="kotel">–</span><span class="unit"> °C</span></div>
-    </div>
-
-    <div class="card">
-        <h2>Teplota bojler</h2>
-        <div class="value"><span id="bojler">–</span><span class="unit"> °C</span></div>
-    </div>
-
-    <div class="card">
-        <h2>Teplota venku</h2>
-        <div class="value"><span id="venku">–</span><span class="unit"> °C</span></div>
-    </div>
-
-    <div class="card">
-        <h2>Energie pro ohřev bojleru (24 h)</h2>
-        <div class="value"><span id="energie">–</span><span class="unit"> kWh</span></div>
-    </div>
+<div class="grid">
+    <div class="card"><h3>Teplota kotle</h3><div class="value" id="t_kotel">-- °C</div></div>
+    <div class="card"><h3>Bojler</h3><div class="value" id="t_bojler">-- °C</div></div>
+    <div class="card"><h3>Venkovní</h3><div class="value" id="t_venku">-- °C</div></div>
+    <div class="card"><h3>Zpátečka</h3><div class="value" id="t_zpatecka">-- °C</div></div>
+    <div class="card"><h3>Podavač</h3><div class="value" id="t_podavac">-- °C</div></div>
+    <div class="card"><h3>Aktuální výkon</h3><div class="value" id="vykon">-- kW</div></div>
 </div>
 
 <br>
 
-<canvas id="chart" height="120"></canvas>
+<div class="grid">
+    <div class="card settings">
+        <h3>Nastavení</h3>
+        kg uhlí / 10 min:
+        <input type="number" id="kg10" value="1.5" step="0.1">
+        Cena uhlí (Kč/kg):
+        <input type="number" id="cena" value="6" step="0.1">
+    </div>
 
-<div class="footer">
-    Data: ThingSpeak ID 1957585
+    <div class="card">
+        <h3>Spotřeba 24h</h3>
+        <div class="value" id="spot24">-- kg</div>
+    </div>
+
+    <div class="card">
+        <h3>Spotřeba měsíc</h3>
+        <div class="value" id="spotMes">-- kg</div>
+    </div>
+
+    <div class="card">
+        <h3>Náklady</h3>
+        Den: <b id="nakDen">-- Kč</b><br>
+        Měsíc: <b id="nakMes">-- Kč</b><br>
+        Rok: <b id="nakRok">-- Kč</b>
+    </div>
+</div>
+
+<br>
+<div class="card">
+    <h3>Graf teplot – posledních 24h</h3>
+    <canvas id="chart24"></canvas>
 </div>
 
 </div>
+
+<footer>
+    Data: ThingSpeak | Panel připraven pro GitHub Pages
+</footer>
 
 <script>
-/* ===== NASTAVENÍ ===== */
-const CHANNEL = 1957585;
-const URL = `https://api.thingspeak.com/channels/${CHANNEL}/feeds.json?results=288`;
-const BOJLER_OBJEM_L = 120;
-const C = 4.186;
+const CHANNEL = 231269;
+const API = `https://api.thingspeak.com/channels/${CHANNEL}/feeds.json?results=288`;
 
-/* ===== TÉMA ===== */
-function toggleTheme() {
-    document.body.classList.toggle("light");
-    localStorage.setItem("theme",
-        document.body.classList.contains("light") ? "light" : "dark");
+function now() {
+    document.getElementById("datetime").innerText =
+        new Date().toLocaleString("cs-CZ");
 }
-if (localStorage.getItem("theme") === "light") {
-    document.body.classList.add("light");
+setInterval(now,1000);
+now();
+
+async function loadData() {
+    const r = await fetch(API);
+    const d = await r.json();
+    const f = d.feeds;
+
+    const last = f[f.length-1];
+    document.getElementById("lastUpdate").innerText =
+        "Poslední aktualizace: " + new Date(last.created_at).toLocaleString("cs-CZ");
+
+    t("t_kotel", last.field5);
+    t("t_bojler", last.field3);
+    t("t_venku", last.field4);
+    t("t_zpatecka", last.field1);
+    t("t_podavac", last.field2);
+
+    const feederNow = parseFloat(last.field8 || 0);
+    const feeder24 = parseFloat(f[0].field8 || 0);
+    const diffMin = feederNow - feeder24;
+
+    const kg10 = parseFloat(document.getElementById("kg10").value);
+    const kgPerMin = kg10 / 10;
+    const spot24 = diffMin * kgPerMin;
+
+    document.getElementById("spot24").innerText = spot24.toFixed(1)+" kg";
+    document.getElementById("spotMes").innerText = (spot24*30).toFixed(0)+" kg";
+
+    const cena = parseFloat(document.getElementById("cena").value);
+    document.getElementById("nakDen").innerText = (spot24*cena).toFixed(0);
+    document.getElementById("nakMes").innerText = (spot24*30*cena).toFixed(0);
+    document.getElementById("nakRok").innerText = (spot24*365*cena).toFixed(0);
+
+    // výkon kotle (odhad)
+    const lastHour = f.slice(-12);
+    const runMin = lastHour[lastHour.length-1].field8 - lastHour[0].field8;
+    const power = Math.min(25, (runMin/60)*25);
+    document.getElementById("vykon").innerText = power.toFixed(1)+" kW";
+
+    drawChart(f);
 }
 
-/* ===== FULLSCREEN ===== */
-function toggleFullscreen() {
-    if (!document.fullscreenElement) {
-        document.documentElement.requestFullscreen();
-    } else {
-        document.exitFullscreen();
-    }
+function t(id,val){
+    document.getElementById(id).innerText = val ? val+" °C" : "--";
 }
 
-/* ===== ČAS (bez datumu) ===== */
-function updateTime() {
-    document.getElementById("now").innerText =
-        new Date().toLocaleTimeString("cs-CZ");
-}
-setInterval(updateTime, 1000);
-updateTime();
-
-/* ===== DATA ===== */
-fetch(URL)
-.then(r => r.json())
-.then(data => {
-    const feeds = data.feeds;
-    const last = feeds.at(-1);
-
-    kotel.innerText = (+last.field1).toFixed(1);
-    bojler.innerText = (+last.field2).toFixed(1);
-    venku.innerText = (+last.field3).toFixed(1);
-
-    lastUpdate.innerText =
-        new Date(last.created_at).toLocaleTimeString("cs-CZ");
-
-    const labels = feeds.map(f =>
-        new Date(f.created_at).toLocaleTimeString("cs-CZ")
-    );
-
-    const bojlerData = feeds.map(f => +f.field2);
-
-    const dT = Math.max(bojlerData.at(-1) - bojlerData[0], 0);
-    const energie = (BOJLER_OBJEM_L * C * dT) / 3600;
-    document.getElementById("energie").innerText = energie.toFixed(2);
-
-    new Chart(chart, {
-        type: "line",
-        data: {
+let chart;
+function drawChart(f){
+    const labels = f.map(x=>new Date(x.created_at).toLocaleTimeString("cs-CZ"));
+    const dataKotel = f.map(x=>x.field5);
+    if(chart) chart.destroy();
+    chart = new Chart(document.getElementById("chart24"),{
+        type:"line",
+        data:{
             labels,
-            datasets: [
-                { label: "Kotel", data: feeds.map(f=>+f.field1), borderColor: "#f97316", tension:.3 },
-                { label: "Bojler", data: bojlerData, borderColor: "#38bdf8", tension:.3 },
-                { label: "Venku", data: feeds.map(f=>+f.field3), borderColor: "#22c55e", tension:.3 }
-            ]
-        },
-        options: {
-            plugins: { legend: { labels: { color: getComputedStyle(document.body).color } } },
-            scales: {
-                x: { ticks: { color: getComputedStyle(document.body).color } },
-                y: { ticks: { color: getComputedStyle(document.body).color } }
-            }
+            datasets:[{
+                label:"Teplota kotle",
+                data:dataKotel,
+                borderColor:"red",
+                tension:0.3
+            }]
         }
     });
-});
+}
+
+loadData();
+setInterval(loadData,60000);
 </script>
 
 </body>
