--- a/index.html
+++ b/index.html
@@ -1,140 +1,226 @@
 <!doctype html>
 <html lang="cs">
 <head>
-<meta charset="utf-8"/>
-<title>Profi Panel Kotelny – Attack FD 25</title>
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta charset="utf-8">
+<title>Kotelna – Attack FD 25</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 <style>
-body{margin:0;font-family:Segoe UI;background:#1e3c72;color:#000}
-header{background:#000;color:#fff;padding:15px 20px;display:flex;justify-content:space-between}
-main{padding:20px;max-width:1400px;margin:auto}
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:20px}
-.card{background:#fff;border-radius:15px;padding:20px}
-.value{font-size:32px;font-weight:700;color:#d32f2f}
-.sub{font-size:13px;color:#555}
-.today{color:#4caf50}
-.month{color:#2196f3}
-input{width:100%;padding:10px}
+*{box-sizing:border-box}
+body{
+  margin:0;
+  font-family:Segoe UI,system-ui;
+  background:linear-gradient(135deg,#1e3c72,#2a5298);
+  color:#222;
+}
+header{
+  background:#000;
+  color:#fff;
+  padding:15px 20px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+main{max-width:1400px;margin:auto;padding:20px}
+
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+  gap:20px;
+}
+
+.card{
+  background:#fff;
+  border-radius:14px;
+  padding:20px;
+  box-shadow:0 10px 30px rgba(0,0,0,.25);
+}
+
+h2{
+  margin:0 0 12px;
+  font-size:16px;
+  color:#1e3c72;
+}
+
+.value{
+  font-size:34px;
+  font-weight:700;
+  color:#d32f2f;
+}
+.sub{
+  font-size:13px;
+  color:#555;
+}
+.green{color:#2e7d32}
+.blue{color:#1565c0}
+
+.settings{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:15px;
+}
+
+input{
+  width:100%;
+  padding:10px;
+  font-size:15px;
+}
 </style>
 </head>
 
 <body>
+
 <header>
   <div id="clock"></div>
-  <div>🔥 Reálný výkon + denní reset</div>
+  <div>Attack FD 25 – Profi panel</div>
 </header>
 
 <main>
 
+<!-- ====== TEPLOTY ====== -->
 <div class="grid">
-  <div class="card"><div class="sub">Teplota kotle</div><div class="value" id="field5">--</div></div>
-  <div class="card"><div class="sub">Čas podavače</div><div class="value" id="field8">--</div></div>
+  <div class="card"><h2>🔥 Kotel</h2><div class="value" id="tKotel">--</div></div>
+  <div class="card"><h2>⚙️ Podavač</h2><div class="value" id="tPodavac">--</div></div>
+  <div class="card"><h2>💧 Bojler</h2><div class="value" id="tBojler">--</div></div>
+  <div class="card"><h2>↩️ Zpátečka</h2><div class="value" id="tZpet">--</div></div>
+  <div class="card"><h2>🌡️ Venku</h2><div class="value" id="tVenku">--</div></div>
+  <div class="card"><h2>⏱️ Podavač – čas</h2><div class="value" id="feedTime">--</div></div>
 </div>
 
 <br>
 
+<!-- ====== SPOTŘEBA ====== -->
 <div class="card">
-  <div class="sub">AKTUÁLNĚ</div>
-  <div class="value today" id="consCurrent">0 kg</div>
-
-  <div class="sub">DNES</div>
-  <div class="value today" id="consToday">0 kg</div>
-
-  <div class="sub">MĚSÍC</div>
-  <div class="value month" id="consMonth">0 kg</div>
-
-  <div class="sub">VÝKON (reálný)</div>
-  <div class="value" id="realPower">0 kW</div>
+<h2>💰 Spotřeba uhlí</h2>
+<div class="grid">
+  <div><div class="sub">AKTUÁLNĚ</div><div class="value green" id="consCurrent">0 kg</div></div>
+  <div><div class="sub">DNES</div><div class="value green" id="consToday">0 kg</div></div>
+  <div><div class="sub">MĚSÍC</div><div class="value blue" id="consMonth">0 kg</div></div>
+  <div><div class="sub">NÁKLADY DNES</div><div class="value" id="costToday">0 Kč</div></div>
+</div>
 </div>
 
 <br>
 
+<!-- ====== VÝKON ====== -->
 <div class="card">
-  <div class="sub">Kg / 10 min</div>
-  <input type="number" id="feedRate10min" value="2.5" step="0.1">
+<h2>⚡ Reálný výkon z paliva</h2>
+<div class="value" id="realPower">0 kW</div>
+<div class="sub">Výpočet z kg/h (výhřevnost 4.8 kWh/kg, účinnost 75 %)</div>
+</div>
 
-  <div class="sub">Cena / kg</div>
-  <input type="number" id="pricePerKg" value="15.5" step="0.1">
+<br>
+
+<!-- ====== NASTAVENÍ ====== -->
+<div class="card">
+<h2>⚙️ Nastavení</h2>
+<div class="settings">
+  <div>
+    <label>Kg uhlí za 10 min</label>
+    <input type="number" id="kg10min" value="2.5" step="0.1">
+  </div>
+  <div>
+    <label>Cena za kg</label>
+    <input type="number" id="priceKg" value="15.5" step="0.1">
+  </div>
+</div>
 </div>
 
 </main>
 
 <script>
-const CHANNEL_ID = 231269;
-const COAL_ENERGY = 4.8;
-const BOILER_EFF = 0.75;
+/* ====== KONSTANTY ====== */
+const CHANNEL = 231269;
+const ENERGY_KWH_KG = 4.8;
+const EFFICIENCY = 0.75;
 
-const feedRateInput = document.getElementById("feedRate10min");
-
-function clock(){
-  clockEl.textContent = new Date().toLocaleString("cs-CZ");
+/* ====== CLOCK ====== */
+function updateClock(){
+  clock.textContent = new Date().toLocaleString("cs-CZ");
 }
-const clockEl = document.getElementById("clock");
 
+/* ====== HELPERY ====== */
 function secondsToKg(sec){
-  return (sec/600)*(parseFloat(feedRateInput.value)||2.5);
-}
-
-function kgPerHour(seconds){
-  return secondsToKg(seconds);
-}
-
-function powerFromKgH(kgH){
-  return kgH * COAL_ENERGY * BOILER_EFF;
+  return (sec / 600) * (parseFloat(kg10min.value) || 2.5);
 }
 
 function todayKey(){
   return new Date().toISOString().slice(0,10);
 }
 
-function dailyBase(){
-  const k = todayKey();
-  if(localStorage.day !== k){
-    localStorage.day = k;
-    localStorage.base8 = null;
+/* ====== RESET DNES ====== */
+function checkDailyReset(currentSec){
+  if(localStorage.day !== todayKey()){
+    localStorage.day = todayKey();
+    localStorage.baseSec = currentSec;
   }
+  if(!localStorage.baseSec){
+    localStorage.baseSec = currentSec;
+  }
+  return currentSec - localStorage.baseSec;
 }
 
-async function fetchData(p){
-  const r = await fetch(`https://api.thingspeak.com/channels/${CHANNEL_ID}/feeds.json?${p}`);
-  return (await r.json()).feeds||[];
+/* ====== FETCH ====== */
+async function fetchFeeds(params){
+  const r = await fetch(
+    `https://api.thingspeak.com/channels/${CHANNEL}/feeds.json?${params}`
+  );
+  return (await r.json()).feeds || [];
 }
 
+/* ====== UPDATE ====== */
 async function update(){
-  dailyBase();
-
-  const cur = await fetchData("results=1");
+  const cur = await fetchFeeds("results=1");
   if(!cur.length) return;
 
   const f = cur[0];
-  const sec = parseFloat(f.field8)||0;
 
-  if(localStorage.base8===null){
-    localStorage.base8 = sec;
+  // teploty
+  tKotel.textContent   = (+f.field5 || 0).toFixed(1)+" °C";
+  tPodavac.textContent = (+f.field2 || 0).toFixed(1)+" °C";
+  tBojler.textContent  = (+f.field3 || 0).toFixed(1)+" °C";
+  tZpet.textContent    = (+f.field1 || 0).toFixed(1)+" °C";
+  tVenku.textContent   = (+f.field4 || 0).toFixed(1)+" °C";
+
+  const totalSec = +f.field8 || 0;
+  feedTime.textContent = totalSec+" s";
+
+  // aktuálně
+  consCurrent.textContent =
+    secondsToKg(totalSec).toFixed(2)+" kg";
+
+  // dnes
+  const todaySec = checkDailyReset(totalSec);
+  const todayKg = secondsToKg(todaySec);
+  consToday.textContent = todayKg.toFixed(2)+" kg";
+  costToday.textContent =
+    (todayKg * (priceKg.value || 15.5)).toFixed(0)+" Kč";
+
+  // měsíc
+  const month = await fetchFeeds("days=30&results=8000");
+  if(month.length > 1){
+    const mSec = month.at(-1).field8 - month[0].field8;
+    consMonth.textContent =
+      secondsToKg(mSec).toFixed(0)+" kg";
   }
 
-  const todaySec = sec - parseFloat(localStorage.base8);
-
-  field5.textContent = (parseFloat(f.field5)||0).toFixed(1)+" °C";
-  field8.textContent = sec+" s";
-
-  consCurrent.textContent = secondsToKg(sec).toFixed(2)+" kg";
-  consToday.textContent = secondsToKg(todaySec).toFixed(2)+" kg";
-
-  const monthFeeds = await fetchData("days=30&results=8000");
-  if(monthFeeds.length>1){
-    const m = monthFeeds.at(-1).field8 - monthFeeds[0].field8;
-    consMonth.textContent = secondsToKg(m).toFixed(0)+" kg";
-  }
-
-  const power = powerFromKgH(kgPerHour(sec));
-  realPower.textContent = power.toFixed(1)+" kW";
+  // výkon z poslední hodiny (odhad)
+  const powerKgH = secondsToKg(todaySec) * (3600 / Math.max(todaySec,1));
+  const powerKW = powerKgH * ENERGY_KWH_KG * EFFICIENCY;
+  realPower.textContent = powerKW.toFixed(1)+" kW";
 }
 
-clock();
+/* ====== START ====== */
+updateClock();
 update();
-setInterval(clock,1000);
+setInterval(updateClock,1000);
 setInterval(update,30000);
+
+kg10min.oninput = update;
+priceKg.oninput = update;
 </script>
+
 </body>
 </html>
